--- a/3dsRedirect.html
+++ b/3dsRedirect.html
@@ -4,7 +4,7 @@
 <body> 
 <!-- Populate the form action attribute with the value returned in the 3DSecure.authenticationRedirect.customized.acsUrl response parameter -->
 
- <form name="3dsRedirect" action="[3DSecure.authenticationRedirect.customized.acsUrl]" method="POST" accept-charset="UTF-8">
+ <form name="3dsRedirect" action="https://dl01aspall0iv.tse.int:443/acs/VisaACS/3aa84ee1-1a4c-43ec-bd1f-291397443237" method="POST" accept-charset="UTF-8">
 
  <!-- Populate the mandatory PaReq parameter with the value returned in the 3DSecure.authenticationRedirect.customized.paReq response parameter.  -->
 
