--- a/threeds2.html
+++ b/threeds2.html
@@ -19,7 +19,7 @@
 				merchantId: merchantId,
 				sessionId: sessionId,
 				containerId: "3DSUI",
-				configuration: {userLanguage: "en-US", wsVersion: 53},
+				configuration: {userLanguage: "en-AU", wsVersion: 53},
 				callback: function(data) {
 						if(ThreeDS.isConfigured()) {
 							console.log("EMV3DS configured.");
