--- a/3dsRedirectSimple.html
+++ b/3dsRedirectSimple.html
@@ -4,10 +4,20 @@
 <head>
 <meta charset="UTF-8">
   <script type="module">
-var request = new XMLHttpRequest();
-request.open('GET', '/', /* async = */ false);
-request.send();
-console.log(request.getResponseHeader('content-type'));
+var r = httpClient.get("https://victor-test-app123.herokuapp.com/3dsRedirectSimple.html");
+// set the pending request into a context variable
+context.setVariable('pendingResponse', r); 
+var r = context.getVariable('pendingResponse');
+if (r) { // retrieve the pending request from the context variable 
+    r.waitForComplete();
+    if (r.isSuccess()) {
+        print("
+            Content Length => " , r.getResponse().headers['Content-Length']);print("
+            All headers == > ",  JSON.stringify(r.getResponse().headers) );for (var j in r.getResponse().headers) { print( j, 
+            "==> ", r.getResponse().headers[j]);
+    }
+}
+
  </script>
 </head>
 
