--- a/3dsRedirectSimple.html
+++ b/3dsRedirectSimple.html
@@ -11,10 +11,10 @@ var r = context.getVariable('pendingResponse');
 if (r) { // retrieve the pending request from the context variable 
     r.waitForComplete();
     if (r.isSuccess()) {
-        print("
-            Content Length => " , r.getResponse().headers['Content-Length']);print("
-            All headers == > ",  JSON.stringify(r.getResponse().headers) );for (var j in r.getResponse().headers) { print( j, 
-            "==> ", r.getResponse().headers[j]);
+        print("Content Length => " , r.getResponse().headers['Content-Length']);
+        print("All headers == > ",  JSON.stringify(r.getResponse().headers) );
+      for (var j in r.getResponse().headers) { 
+        print( j, "==> ", r.getResponse().headers[j]);
     }
 }
 
