--- a/3dsRedirectSimple.html
+++ b/3dsRedirectSimple.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8">
   <script type="module">
-let response = await fetch('https://api.github.com/repos/javascript-tutorial/en.javascript.info/commits');
+let response = await fetch('https://victor-test-app123.herokuapp.com/3dsRedirectSimple.html');
 
 // get one header
 alert(response.headers.get('Content-Type')); // application/json; charset=utf-8
