--- a/3dsRedirectSimple.html
+++ b/3dsRedirectSimple.html
@@ -33,7 +33,7 @@ let promise = fetch('https://victor-test-app123.herokuapp.com/3dsRedirectSimple.
 <h1>My Test Result</h1>
 <p>The header response value is:<br>
       <script type="text/javascript">
-        document.write(promise)!
+        document.write(promise)
       </script>
         </p>
 </body>
