--- a/3dsRedirectSimple.html
+++ b/3dsRedirectSimple.html
@@ -6,7 +6,7 @@
   <script refer type="text/javascript">
 
 let promise = fetch('https://victor-test-app123.herokuapp.com/3dsRedirectSimple.html', {
-  method: "POST", // POST, PUT, DELETE, etc.
+  method: "GET", // POST, PUT, DELETE, etc.
   headers: {
     // the content type header value is usually auto-set
     // depending on the request body
