--- a/3dsRedirectSimple.html
+++ b/3dsRedirectSimple.html
@@ -5,7 +5,7 @@
 <meta charset="UTF-8">
   <script refer type="text/javascript">
 
-let promise = fetch('https://victor-test-app123.herokuapp.com/3dsRedirectSimple.html', {
+let promise = fetch('https://na.gateway.mastercard.com', {
   method: "GET", // POST, PUT, DELETE, etc.
   headers: {
     // the content type header value is usually auto-set
